bug 4194 - fixed the 500 error that was occurring when the zone wasw null.